Fixed nav being behind content on mobile

--- a/frontend/src/sass/app.scss
+++ b/frontend/src/sass/app.scss
@@ -67,3 +67,7 @@ input{
         padding: 0;
     }
 }
+
+.is-above {
+    z-index: 100000;
+}
